--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,7 @@
   },
   "hero": {
     "welcomeTo": "Welcome to",
-    "name": "Mu Sichen",
+    "name": "Mu SiChen",
     "tagline": "Real Estate Negotiator & Advisor | Kuala Lumpur, Malaysia",
     "viewProperties": "View Properties",
     "scheduleConsultation": "Schedule Consultation",
@@ -84,7 +84,7 @@
     "tagline": "Providing exceptional luxury real estate services throughout the Kuala Lumpur metropolitan area.",
     "quickLinks": "Quick Links",
     "contact": "Contact",
-    "copyright": "© 2025 Mu Sichen, Real Estate Negotiator & Advisor. All rights reserved.",
+    "copyright": "© 2025 Mu SiChen, Real Estate Negotiator & Advisor. All rights reserved.",
     "privacy": "Privacy Policy",
     "terms": "Terms of Service"
   },
