--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -9,7 +9,7 @@
   },
   "hero": {
     "welcomeTo": "欢迎来到",
-    "name": "Mu Sichen",
+    "name": "Mu SiChen",
     "tagline": "房地产谈判专家及顾问 | 马来西亚吉隆坡",
     "viewProperties": "查看房产",
     "scheduleConsultation": "预约咨询",
@@ -84,7 +84,7 @@
     "tagline": "在吉隆坡大都市区提供卓越的豪华房地产服务。",
     "quickLinks": "快速链接",
     "contact": "联系方式",
-    "copyright": "© 2025 Mu Sichen，房地产谈判专家及顾问。版权所有。",
+    "copyright": "© 2025 Mu SiChen，房地产谈判专家及顾问。版权所有。",
     "privacy": "隐私政策",
     "terms": "服务条款"
   },
