fixed schedule viewing

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,6 +33,7 @@
     "subtitle": "Discover exceptional properties in the most prestigious neighborhoods throughout the Kuala Lumpur metropolitan area.",
     "searchPlaceholder": "Luxury isn't a price — it's a feeling. Describe yours and we will find your perfect space.",
     "viewDetails": "View Details",
+    "scheduleViewing": "Schedule Viewing",
     "viewAll": "View All Properties",
     "beds": "Beds",
     "baths": "Baths",
