--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -33,6 +33,7 @@
     "subtitle": "探索吉隆坡大都市区最负盛名社区中的卓越房产",
     "searchPlaceholder": "奢华不是价格——而是一种感觉。描述您的需求，我们将为您找到完美的空间。",
     "viewDetails": "查看详情",
+    "scheduleViewing": "预约观看",
     "viewAll": "查看所有房产",
     "beds": "卧室",
     "baths": "浴室",
