fixed back to insights

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -50,6 +50,7 @@
     "subtitle": "通过豪华房地产领域的专家分析、市场趋势和战略洞察保持信息更新。",
     "readMore": "阅读更多",
     "viewAll": "查看所有洞察",
+    "backToInsights": "返回见解页面",
     "categories": {
       "marketAnalysis": "市场分析",
       "strategy": "策略",
