--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,6 +50,7 @@
     "subtitle": "Stay informed with expert analysis, market trends, and strategic insights from the luxury real estate landscape.",
     "readMore": "Read More",
     "viewAll": "View All Insights",
+    "backToInsights": "Back to Insights",
     "categories": {
       "marketAnalysis": "Market Analysis",
       "strategy": "Strategy",
