--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,6 +49,7 @@
     "title": "Market Insights",
     "subtitle": "Stay informed with expert analysis, market trends, and strategic insights from the luxury real estate landscape.",
     "readMore": "Read More",
+    "viewMore": "View More",
     "viewAll": "View All Insights",
     "backToInsights": "Back to Insights",
     "categories": {
