--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,6 +35,7 @@
     "viewDetails": "View Details",
     "scheduleViewing": "Schedule Viewing",
     "viewAll": "View All Properties",
+    "loadMore": "Load More",
     "beds": "Beds",
     "baths": "Baths",
     "sqft": "sq ft",
