--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -35,6 +35,7 @@
     "viewDetails": "查看详情",
     "scheduleViewing": "预约观看",
     "viewAll": "查看所有房产",
+    "loadMore": "加载更多",
     "beds": "卧室",
     "baths": "浴室",
     "sqft": "平方英尺",
