--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,6 +36,8 @@
     "scheduleViewing": "Schedule Viewing",
     "viewAll": "View All Properties",
     "loadMore": "Load More",
+    "prev": "Previous",
+    "next": "Next",
     "beds": "Beds",
     "baths": "Baths",
     "sqft": "sq ft",
