--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -36,6 +36,8 @@
     "scheduleViewing": "预约观看",
     "viewAll": "查看所有房产",
     "loadMore": "加载更多",
+    "prev": "上一页",
+    "next": "下一页",
     "beds": "卧室",
     "baths": "浴室",
     "sqft": "平方英尺",
