change intro msg

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,8 +17,8 @@
   },
   "intro": {
     "title": "Exceptional Service, Extraordinary Results",
-    "description1": "With over a decade of experience in the luxury real estate market, I specialize in providing discerning clients with unparalleled service in the Kuala Lumpur metropolitan area. From exclusive KLCC homes to contemporary country homes, I bring expertise, discretion, and a commitment to excellence to every transaction.",
-    "description2": "My approach is built on understanding your unique needs and delivering results that exceed expectations. Whether you're acquiring your dream home or maximizing the value of your investment, you can count on white-glove service every step of the way. The Agency I represented Propnex has more than two decades of relationship built in the industry with an astounding performance and trust.",
+    "description1": "Propnex Malaysia has over a decade of experience in the luxury real estate market, and my specialty is providing discerning clients with unparalleled service in the Kuala Lumpur metropolitan area. From exclusive KLCC homes to contemporary country homes, I bring expertise, discretion, and a commitment to excellence to every transaction.",
+    "description2": "My approach is built on understanding your unique needs and delivering results that exceed expectations. Whether you're acquiring your dream home or maximizing the value of your investment, you can count on white-glove service every step of the way. The Agency I represented Propnex Malaysia has more than two decades of relationship built in the industry with an astounding performance and trust.",
     "stats": {
       "revenue": "$3.2B+",
       "revenueLabel": "Propnex Agency Revenue in 2024",
