--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -16,9 +16,9 @@
     "videoNotSupported": "您的浏览器不支持视频标签。"
   },
   "intro": {
-    "title": "卓越服务，非凡成果",
-    "description1": "凭借在豪华房地产市场十多年的经验，我专门为吉隆坡大都市区的挑剔客户提供无与伦比的服务。从独家KLCC住宅到现代乡村别墅，我为每一笔交易带来专业知识、谨慎态度和卓越承诺。",
-    "description2": "我的方法建立在理解您的独特需求并提供超越期望的结果基础上。无论您是在购买梦想家园还是最大化您的投资价值，您都可以在每一步中依赖白手套服务。我所代表的机构PropNex在行业中建立了二十多年的关系，拥有惊人的业绩和信任。",
+   "title": "卓越服务，非凡成果",
+    "description1": "Propnex 马来西亚在豪华房地产市场拥有十多年的经验，而我的专长是为吉隆坡都会区的高端客户提供无与伦比的服务。从独特的 KLCC 豪宅到现代化的乡村别墅，我在每一笔交易中都秉持专业、谨慎和对卓越的承诺。",
+    "description2": "我的方式建立在深入理解您的独特需求并交付超越预期的成果之上。无论您是购置梦想之家，还是最大化投资价值，您都可以在每一个环节上依赖我提供顶级服务。我所代表的 Propnex 马来西亚在行业内积累了二十多年的关系，以卓越的业绩和信任赢得声誉。",
     "stats": {
       "revenue": "$3.2B+",
       "revenueLabel": "PropNex机构2024年营收",
