changed the narrative

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -106,8 +106,8 @@
     "returnHome": "Return to Home"
   },
   "sponsored": {
-    "badge": "Sponsored Highlight",
-    "title": "Featured Development",
+    "badge": "LET US FEATURE YOUR EXCLUSIVE PROPERTY",
+    "title": "Imperial Heights, Noble Living",
     "viewProject": "View Project",
     "projects": {
       "imperialHouse": {
