--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -106,8 +106,8 @@
     "returnHome": "返回首页"
   },
   "sponsored": {
-    "badge": "赞助亮点",
-    "title": "特色开发项目",
+    "badge": "让我们展示您的专属房产",
+    "title": "帝豪轩，尊贵生活",
     "viewProject": "查看项目",
     "projects": {
       "imperialHouse": {
